# rosev_ircsystem

./: Documentation.odt
conf/: Channel_Observers.ini  Channel_Users.ini  Channels.ini  LogBot.ini  MainConfig.ini  Motd.txt  NickServ_Users.ini  VoteBotManager.ini  VoteBot_1.ini  VoteBot_2.ini
scripts/: Mail.txt  Users.csv  add_irc_users.php  ldap_config.inc.php  rosev_ircsystem.conf  rosev_ircsystem.service
src/: CChanServ.cpp  CChanServ.h  CChannel.cpp  CChannel.h  CClient.cpp  CClient.h  CConfiguration.cpp  CConfiguration.h  CIRCServer.cpp  CIRCServer.h  CLogBot.cpp  CLogBot.h  CMakeLists.txt  CNetworkClient.cpp  CNetworkClient.h  CNickServ.cpp  CNickServ.h  CPlainNetworkClient.cpp  CPlainNetworkClient.h  CSSLNetworkClient.cpp  CSSLNetworkClient.h  CVirtualClient.cpp  CVirtualClient.h  CVoteBot.cpp  CVoteBot.h  CVoteBotManager.cpp  CVoteBotManager.h  exceptions.h  irc_constants.h  main.cpp  main.rc  messages.mc  precomp.h  run_console.cpp  run_nt_service.cpp  run_posix_daemon.cpp  version.h.in
